--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,7 @@ jobs:
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        uses: Amadevus/pwsh-script@v2.0.1
-        with:
-          file: .\compress.ps1
-      - run: "New-Epub .\\ostrovityanov-politeconomia\\"
+      - name: Build
+        shell: pwsh
+        run: |
+          . .\build.ps1 "New-Epub .\ostrovityanov-politeconomia\
