--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,28 @@
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        uses: Amadevus/pwsh-script@v2.0.1
+      - name: Compress EPUBs
+        shell: pwsh
+        run: |
+          . .\compress.ps1 
+          New-Epub .\ostrovityanov-politeconomia\
+          
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
         with:
-          file: .\compress.ps1
-      - run: "New-Epub .\\ostrovityanov-politeconomia\\"
+          name: ostrovityanov-politeconomia
+          path: ostrovityanov-politeconomia.epub
