--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,14 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  compress:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-      
       - uses: actions/setup-node@v2
-      - name: Setup NPM
+        
+      - name: Setup tooling
         run: sudo npm i html-minifier -g
 
       - name: Minify EPUBs
@@ -34,5 +34,26 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: ostrovityanov-politeconomia
+          name: books
           path: ostrovityanov-politeconomia.epub
+
+  upload:
+    needs: compress
+    runs-on: ubuntu-latest
+    if: contains('refs/heads/master', github.ref)
+    
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: books
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: books
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      
