--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "george-alisson.html-preview-vscode"
+        "george-alisson.html-preview-vscode",
+        "ms-vscode.powershell"
     ]
 }
